# oil-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  mkdocs.yml
assets/markup/: test.xml
assets/style/: test.style
data_bindings/: Cargo.toml
data_bindings/src/: error.rs  lib.rs  lookup.rs  macros.rs
data_bindings/src/context/: manager.rs  mod.rs  proxies.rs
data_bindings/src/store/: cast.rs  impls.rs  mod.rs  value.rs
docs/: action.md  index.md
docs/languages_reference/: intro.md  properties_list.md  tag_list.md
examples/: list.markup  list.rs  list.style  menu.deps  menu.markup  menu.rs  menu.style  shop_inventory.deps  shop_inventory.markup  shop_inventory.rs  shop_inventory.style
examples/util/: mod.rs
fonts/: Cargo.toml
fonts/src/: font.rs  font_context.rs  freetype.rs  lib.rs  shaper.rs
fonts/src/glyph/: mod.rs
fonts/src/util/: mod.rs  unit.rs
parsers/: Cargo.toml
parsers/src/: lib.rs  report.rs
parsers/src/markup/: lib.rs  mod.rs  parser.rs  tags.rs
parsers/src/parsing/: bufferconsumer.rs  error.rs  mod.rs
parsers/src/style/: mod.rs  parser.rs
shared/: Cargo.toml
shared/src/: asset.rs  deps.rs  lib.rs  markup.rs  properties.rs  resource.rs  style.rs
src/: data_bindings.rs  deps.rs  glium.rs  lib.rs  report.rs  resource.rs  router.rs  view.rs
src/asset/: mod.rs
src/backend/: glutinglium.rs  mod.rs
src/data_bindings/: buffer.rs  error.rs  lookup.rs  macros.rs  mod.rs  repeat.rs  store_value.rs
src/data_bindings/context/: binder.rs  manager.rs  mod.rs  prefixkey_iter.rs  proxies.rs
src/focus/: focus_down.rs  focus_left.rs  focus_right.rs  focus_up.rs  mod.rs  tagged_tree.rs
src/focus/direction/: down.rs  left.rs  mod.rs  right.rs  up.rs
src/layout/: boxes.rs  buffer.rs  dim.rs  mod.rs  rect.rs
src/layout/boxes/: buffer.rs  iter.rs  mod.rs
src/layout/boxes/buffer/: mod.rs
src/markup/: lib.rs  mod.rs  parser.rs  tags.rs
src/parsing/: bufferconsumer.rs
src/rendering/: glutinglium.rs  mod.rs  render.rs  view.rs
src/rendering/backend/: glutinglium.rs
src/state/: mod.rs
src/style/: mod.rs  parser.rs  rules.rs  tree.rs
src/util/: buffer.rs  mod.rs
src/util/flat_tree/: buffer.rs  mod.rs
