
[package]
name = "uil"
version = "0.0.3"
authors = ["Nemikolh <joan.varvenne@gmail.com>"]
homepage = "http://uil-lang.github.io/"
repository = "https://github.com/uil-lang/uil-rs"
readme = "README.md"
license = "MIT"
keywords = ["ui", "opengl", "gamedev"]
description = "User interface library oriented for games. It includes user interface languages."
exclude = [
    ".travis.yml",
    "examples/*"
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false

[dependencies]
bitflags = "0.1"
phf = "*"
phf_macros = "*"
image = "*"
cgmath = "*"
num = "*"

[dependencies.uil_parsers]
path = "./parsers"
version = "=0.0.3"

[dependencies.uil_shared]
path = "./shared"
version = "=0.0.3"

[dependencies.glium]
version = "*"
features = ["default", "cgmath"]

[dev-dependencies.glutin]
version = "*"

[dev-dependencies]
clock_ticks = "*"
