
[package]
name = "oil"
version = "0.1.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
readme = "README.md"
license = "MIT"
keywords = ["ui", "opengl", "gamedev"]
description = "User interface library oriented for games. It includes user interface languages."
exclude = [
    ".travis.yml",
    "examples/*",
    "docs/*",
    "mkdocs.yml"
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false

[dependencies]
bitflags = "0.1"
phf = "*"
phf_macros = "*"
image = "*"
cgmath = "*"
num = "*"

[dependencies.uil_parsers]
path = "./parsers"
version = "=0.1.0"

[dependencies.uil_shared]
path = "./shared"
version = "=0.1.0"

[dependencies.glium]
version = "*"
features = ["default", "cgmath"]

[dev-dependencies.glutin]
version = "*"

[dev-dependencies]
clock_ticks = "*"
