
[package]
name = "oil_databindings"
version = "0.2.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
license = "MIT"
keywords = ["ui", "data-bindings"]
description = "Data-bindings crate for oil."

[dependencies]
mopa = "0.2.0"
num = "*"