
[package]
name = "oil_parsers"
version = "0.1.0"
authors = ["Nemikolh <joan.varvenne@gmail.com>", "Vaelden <maugan.villatel@gmail.com>"]
homepage = "http://oil-lang.github.io/"
repository = "https://github.com/oil-lang/oil-rs"
license = "MIT"
keywords = ["ui", "parser"]
description = "Parsers for oil."

[dependencies]
xml-rs = "*"
phf = "*"
phf_macros = "*"
num = "*"

[dependencies.uil_shared]
path = "../shared"
version = "=0.1.0"
